// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards Paragraph Check Paragraph 1`] = `
{
  "p": {
    "bottom-gap-general": 20,
    "color": "",
    "color-global": true,
    "font-size-general": 20,
    "font-size-xl": 20,
    "font-style-general": "italic",
    "font-weight-general": "300",
    "letter-spacing-general": 5,
    "letter-spacing-xl": 5,
    "line-height-general": 10,
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-indent-general": 44,
    "text-transform-general": "capitalize",
    "text-wrap-general": "wrap",
    "white-space-general": "pre",
    "word-spacing-general": 10,
  },
}
`;

exports[`StyleCards Paragraph Works on responsive 1`] = `
{
  "p": {
    "bottom-gap-general": 20,
    "bottom-gap-m": 10,
    "color": "",
    "color-global": true,
    "font-size-general": 20,
    "font-size-m": 10,
    "font-size-xl": 20,
    "font-style-general": "italic",
    "font-style-m": "oblique",
    "font-weight-general": "300",
    "font-weight-m": "400",
    "letter-spacing-general": 5,
    "letter-spacing-m": 15,
    "letter-spacing-xl": 5,
    "line-height-general": 10,
    "line-height-m": 20,
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-decoration-m": "underline",
    "text-indent-general": 44,
    "text-indent-m": 22,
    "text-transform-general": "capitalize",
    "text-transform-m": "uppercase",
    "text-wrap-general": "wrap",
    "white-space-general": "pre",
    "white-space-m": "pre-wrap",
    "word-spacing-general": 10,
    "word-spacing-m": 20,
  },
}
`;
